# Curvature

./: .gitignore  AGENTS.md  MANIFESTO.md  README.md  SPEC.md  floor-badge.json  gate.sh  publish.sh  pyproject.toml  ratchet.toml  run.sh  site.sh
.github/workflows/: gate.yml
demo/: app.py  roadmap_store.py  store.py
demo/components/: pit_board.py  shell.py  tower.py
demo/data/: roadmap.json
demo/static/: manifold.css  tarmac.css  tower.css
docs/: BENCHMARKS.md  DEPLOY.md  ROADMAP.md  TIME_TRIALS.md  UPGRADING.md
scripts/: bench.py
src/camber/: __init__.py  __main__.py  errors.py  fragments.py  html.py
src/camber/gate/: checks.py  cli.py  findings.py  ratchet.py  scaffold.py
src/camber/gate/templates/: AGENTS.md.tmpl  README.md.tmpl  gate.sh.tmpl  main.py.tmpl  pyproject.toml.tmpl  shell.py.tmpl  tarmac.css.tmpl  test_app.py.tmpl  welcome.py.tmpl
src/camber/static/: camber.js
src/curvature/: __init__.py  __main__.py  atlas.py  chart.py  component.py  errors.py  fragments.py  html.py  introspect.py  live.py  satellites.py
src/curvature/gate/: bounds.py  checks.py  cli.py  css.py  findings.py  ratchet.py  routes.py  scaffold.py
src/curvature/gate/templates/: AGENTS.md.tmpl  README.md.tmpl  gate.sh.tmpl  gitignore.tmpl  main.py.tmpl  manifold.css.tmpl  pyproject.toml.tmpl  run.sh.tmpl  shell.py.tmpl  test_app.py.tmpl  welcome.py.tmpl
src/curvature/pours/auth/: oidc.py  routes.py  routes_oidc.py  routes_totp.py  satellite.py  security.py  sessions.py  store.py  store_json.py  store_mongo.py  store_sqlite.py
src/curvature/pours/auth/_tests/: test_auth_factors.py  test_auth_satellite.py  test_auth_store.py  test_auth_store_mongo.py
src/curvature/pours/auth/components/: auth_forms.py  token_desk.py  totp_desk.py
src/curvature/pours/concierge/: resolver.py  routes.py  satellite.py
src/curvature/pours/concierge/_tests/: test_concierge_satellite.py
src/curvature/pours/concierge/components/: concierge_desk.py
src/curvature/static/: curvature-offline.js  curvature.js
tests/: test_atlas.py  test_audits.py  test_boost_browser.py  test_bounds.py  test_chart.py  test_cli.py  test_component.py  test_demo.py  test_fragments.py  test_gate.py  test_html.py  test_introspect.py  test_live.py  test_new_app.py  test_pour.py  test_poured_auth_integration.py  test_satellites.py  test_scaffold.py  test_tower.py  test_website.py
website/: app.py  store.py
website/components/: board.py  pages.py
website/data/: roadmap.json
website/static/: manifold.css
