[project]
name = "curvature"
version = "0.2.4"
description = "A web framework for code that agents maintain. The right path is free fall."
readme = "README.md"
license = "MIT"
license-files = ["LICENSE"]
authors = [
    { name = "Robert Sharp", email = "webmaster@sharpdesigndigital.com" },
]
requires-python = ">=3.14"
keywords = ["web", "framework", "agents", "progressive-enhancement", "server-rendered", "htmx-alternative"]

classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3.14",
    "Topic :: Internet :: WWW/HTTP :: Dynamic Content",
    "Topic :: Software Development :: Libraries :: Application Frameworks",
]
dependencies = [
    "pydantic>=2.11",
    "starlette>=0.47",
]

[project.urls]
Homepage = "https://github.com/siliconsociety/Curvature"
Repository = "https://github.com/siliconsociety/Curvature"
Issues = "https://github.com/siliconsociety/Curvature/issues"

[project.optional-dependencies]
fastapi = ["fastapi>=0.115", "python-multipart>=0.0.20"]

[project.scripts]
curvature = "curvature.gate.cli:main"

[dependency-groups]
dev = [
    "pytest>=9.0",
    "pytest-cov>=7.0",
    "ruff>=0.14",
    "fastapi>=0.115",
    "python-multipart>=0.0.20",
    "uvicorn>=0.35",
    "httpx2>=2.5.0",
]

[build-system]
requires = ["uv_build>=0.9.11,<0.10.0"]
build-backend = "uv_build"

[tool.ruff]
line-length = 100
target-version = "py314"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B", "SIM"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]

[tool.coverage.run]
source = ["src/curvature"]
branch = true
# Pours are delivered code: tested by pouring them into an app and
# running that app's suite, not by importing them here.
omit = ["src/curvature/pours/*"]

[tool.coverage.report]
show_missing = true
